refactoring
- change shortcut keys
- fix #19